--- a/kid.html
+++ b/kid.html
@@ -3,177 +3,123 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Ageflix - Home</title>
+<title>Face Analysis Demo</title>
 <style>
-*{margin:0;padding:0;box-sizing:border-box;font-family:Arial,sans-serif;}
-body{background:#000;color:#fff;}
-nav.navbar{display:flex;align-items:center;justify-content:space-between;background:#111;padding:10px 20px;}
-.navbar .logo{color:red;font-size:28px;font-weight:bold;flex:1;}
-.navbar ul{display:flex;list-style:none;flex:2;justify-content:center;}
-.navbar ul li{margin:0 15px;}
-.navbar ul li a{color:#fff;text-decoration:none;font-weight:bold;}
-.navbar .icon{flex:1;text-align:right;font-size:24px;}
-.banner-slider{position:relative;overflow:hidden;max-width:100%;height:400px;margin:20px 0;}
-.slide{position:absolute;width:100%;height:100%;opacity:0;transition:opacity 1s;}
-.slide.active{opacity:1;z-index:2;}
-.slide img{width:100%;height:100%;object-fit:cover;}
-.prev,.next{position:absolute;top:50%;transform:translateY(-50%);background:rgba(0,0,0,0.5);color:#fff;border:none;padding:10px;font-size:24px;cursor:pointer;z-index:3;}
-.prev{left:10px;}
-.next{right:10px;}
-.dots{position:absolute;bottom:10px;left:50%;transform:translateX(-50%);display:flex;gap:8px;z-index:3;}
-.dot{width:12px;height:12px;border-radius:50%;background:rgba(255,255,255,0.5);cursor:pointer;}
-.dot.active{background:#fff;}
-button#startBtn{padding:12px 30px;font-size:18px;background:#e50914;color:#fff;border:none;border-radius:5px;cursor:pointer;margin:20px auto;display:block;}
-@media(max-width:768px){.navbar ul{flex:1;justify-content:space-around;} .banner-slider{height:250px;}}
-/* Popup Styles */
-#popup{position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.9);display:flex;justify-content:center;align-items:center;z-index:9999;}
-.popup-content{background:#111;border:2px solid #e50914;padding:20px 40px;border-radius:12px;text-align:center;color:#fff;max-width:500px;width:90%;animation:fadeIn 0.5s;}
-.popup-content h2{margin-bottom:20px;}
-#nextBtn{background:#e50914;color:#fff;border:none;padding:12px 30px;border-radius:5px;font-size:18px;cursor:pointer;margin-top:20px;}
-#nextBtn:hover{background:#b00610;}
-#loading-screen{position:fixed;top:0;left:0;width:100%;height:100%;background:#000;display:flex;flex-direction:column;justify-content:center;align-items:center;z-index:99999;}
-.loader{border:6px solid #f3f3f3;border-top:6px solid #e50914;border-radius:50%;width:70px;height:70px;animation:spin 1s linear infinite;margin-bottom:20px;}
-.loading-text{font-size:20px;color:#fff;margin-top:10px;}
-@keyframes spin{0%{transform:rotate(0deg);}100%{transform:rotate(360deg);}}
-@keyframes fadeIn{from{opacity:0;transform:scale(0.9);}to{opacity:1;transform:scale(1);}}
-#countdown-bar{width:100%;height:10px;background:#333;border-radius:5px;margin-top:15px;}
-#countdown-fill{width:0%;height:100%;background:#e50914;border-radius:5px;}
+body { font-family: Arial, sans-serif; margin:0; padding:0; }
+header { background:#222; color:#fff; padding:10px 20px; display:flex; align-items:center; justify-content:space-between; }
+header .logo { font-size:24px; font-weight:bold; }
+header nav a { color:#fff; margin-left:20px; text-decoration:none; }
+.slider { display:flex; overflow:hidden; width:100%; max-height:300px; }
+.slider img { width:100%; animation: slide 6s infinite; }
+@keyframes slide {
+  0%,50% { transform: translateX(0); }
+  50%,100% { transform: translateX(-100%); }
+}
+.popup { position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.8); display:flex; justify-content:center; align-items:center; z-index:9999; }
+.popup-content { background:#fff; padding:20px; border-radius:8px; text-align:center; width:450px; max-width:90%; }
+#video-container video { width:100%; border-radius:8px; }
+#label-container p { margin:5px 0; font-size:16px; font-weight:bold; }
+#countdown-bar { width:100%; height:20px; background:#ccc; margin:10px 0; border-radius:10px; overflow:hidden; }
+#countdown-fill { height:100%; width:0%; background:#4caf50; transition:width 1s linear; }
+button { padding:10px 20px; font-size:16px; margin-top:10px; cursor:pointer; }
 </style>
+<script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
 </head>
 <body>
 
-<nav class="navbar">
-  <div class="logo">Ageflix</div>
-  <ul>
-    <li><a href="#">About</a></li>
-    <li><a href="#">Movies</a></li>
-    <li><a href="#">Contact</a></li>
-  </ul>
-  <div class="icon">🎬</div>
-</nav>
+<header>
+  <div class="logo">My Logo</div>
+  <nav>
+    <a href="#">Home</a>
+    <a href="#">About</a>
+    <a href="#">Contact</a>
+  </nav>
+</header>
 
-<section class="banner-slider">
-  <div class="slide active"><img src="1.jpg" alt="Banner 1"></div>
-  <div class="slide"><img src="2.jpg" alt="Banner 2"></div>
-  <button class="prev">&#10094;</button>
-  <button class="next">&#10095;</button>
-  <div class="dots"></div>
-</section>
+<div class="slider">
+  <img src="1.jpg" alt="Slide 1">
+  <img src="2.jpg" alt="Slide 2">
+</div>
 
-<button id="startBtn">Start Camera & Detect Age</button>
-
-<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@3.21.0/dist/tf.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8.4/dist/teachablemachine-image.min.js"></script>
 <script>
-const URL = "https://teachablemachine.withgoogle.com/models/UujRQ_OS4/";
-let model, webcam, maxPredictions;
+const URL = "YOUR_TEACHABLE_MACHINE_URL_HERE/"; // ضع رابط النموذج هنا
+let webcam, model, maxPredictions;
 
-async function init(){
-  const modelURL = URL + "model.json";
-  const metadataURL = URL + "metadata.json";
-  model = await tmImage.load(modelURL, metadataURL);
-  maxPredictions = model.getTotalClasses();
+async function init() {
+    // تحميل النموذج
+    model = await tmImage.load(URL + "model.json", URL + "metadata.json");
+    maxPredictions = model.getTotalClasses();
 
-  webcam = new tmImage.Webcam(400,300,true);
-  await webcam.setup();
-  await webcam.play();
-  showPopupAnalysis();
+    // إعداد الكاميرا
+    webcam = new tmImage.Webcam(400, 300, true);
+    await webcam.setup();
+    await webcam.play();
+
+    // إنشاء البوب
+    const popup = document.createElement("div");
+    popup.className = "popup";
+    popup.id = "popup";
+    popup.innerHTML = `
+      <div class="popup-content">
+        <h2>Analyzing your face...</h2>
+        <div id="video-container"></div>
+        <div id="label-container"></div>
+        <div id="countdown-bar"><div id="countdown-fill"></div></div>
+      </div>
+    `;
+    document.body.appendChild(popup);
+    document.getElementById("video-container").appendChild(webcam.video);
+
+    startCountdown();
+    requestAnimationFrame(loop);
 }
 
-function showPopupAnalysis(){
-  const popup=document.createElement("div");
-  popup.id="popup";
-  popup.innerHTML=`
-    <div class="popup-content">
-      <h2>Analyzing your face...</h2>
-      <div id="webcam-container"></div>
-      <div id="label-container"></div>
-      <div id="countdown-bar"><div id="countdown-fill"></div></div>
-    </div>
-  `;
-  document.body.appendChild(popup);
-
-  document.getElementById("webcam-container").appendChild(webcam.canvas);
-
-  let countdown=20;
-  const countdownFill=document.getElementById("countdown-fill");
-  const labelContainer=document.getElementById("label-container");
-
-  const interval=setInterval(async ()=>{
-    countdown--;
-    countdownFill.style.width=((20-countdown)/20*100)+'%';
-
-    const prediction=await model.predict(webcam.canvas);
-    labelContainer.innerHTML="";
-    prediction.forEach(p=>labelContainer.innerHTML+=`<p>${p.className}: ${(p.probability*100).toFixed(1)}%</p>`);
-    if(countdown<=0){
-      clearInterval(interval);
-      showResult(prediction);
-    }
-  },1000);
+async function loop() {
+    webcam.update();
+    const prediction = await model.predict(webcam.canvas);
+    const labelContainer = document.getElementById("label-container");
+    labelContainer.innerHTML = "";
+    prediction.forEach(p => {
+        labelContainer.innerHTML += `<p>${p.className}: ${(p.probability*100).toFixed(1)}%</p>`;
+    });
+    requestAnimationFrame(loop);
 }
 
-function showResult(prediction){
-  const popup=document.getElementById("popup");
-  popup.querySelector(".popup-content").innerHTML=`
-    <h2>Your Age Group is...</h2>
-    <div id="label-container"></div>
-    <button id="nextBtn">Next ➜</button>
-  `;
-  const labelContainer=document.getElementById("label-container");
-  const best=prediction.reduce((a,b)=>a.probability>b.probability?a:b);
-  labelContainer.innerHTML=`<p>${best.className}: ${(best.probability*100).toFixed(1)}%</p>`;
+// العد التنازلي 20 ثانية
+function startCountdown() {
+    let countdown = 20;
+    const countdownFill = document.getElementById("countdown-fill");
 
-  document.getElementById("nextBtn").addEventListener("click", ()=>{
-    popup.remove();
-    showLoading(best.className);
-  });
+    const interval = setInterval(() => {
+        countdown--;
+        countdownFill.style.width = ((20 - countdown) / 20 * 100) + "%";
+        if (countdown <= 0) {
+            clearInterval(interval);
+            showResult();
+        }
+    }, 1000);
 }
 
-function showLoading(userGroup){
-  const loadingScreen=document.createElement("div");
-  loadingScreen.id="loading-screen";
-  loadingScreen.innerHTML=`
-    <div class="loader"></div>
-    <div class="loading-text">Loading movies suitable for you...</div>
-  `;
-  document.body.appendChild(loadingScreen);
-  setTimeout(()=>{
-    loadingScreen.remove();
-    if(userGroup.toLowerCase()==="kids"||userGroup.toLowerCase()==="kid") location.href="kids.html";
-    else if(userGroup.toLowerCase()==="adult") location.href="adult.html";
-    else if(userGroup.toLowerCase()==="senior") location.href="senior.html";
-    else location.reload();
-  },3000);
+// عرض النتيجة
+function showResult() {
+    const popup = document.getElementById("popup");
+    popup.querySelector(".popup-content").innerHTML = `
+        <h2>Your Age Group is...</h2>
+        <div id="label-container"></div>
+        <button id="nextBtn">Next ➜</button>
+    `;
+    document.getElementById("nextBtn").addEventListener("click", () => {
+        popup.querySelector(".popup-content").innerHTML = "<h2>Loading movies suitable for you...</h2>";
+        setTimeout(() => {
+            popup.remove();
+            window.location.href = "movies.html"; // ضع رابط صفحة الأفلام هنا
+        }, 3000);
+    });
 }
 
-// Banner Slider
-const slides=document.querySelectorAll('.slide');
-const prev=document.querySelector('.prev');
-const nextBtn=document.querySelector('.next');
-const dotsContainer=document.querySelector('.dots');
-let slideIndex=0;
-function showSlide(index){
-  if(index<0) slideIndex=slides.length-1;
-  else if(index>=slides.length) slideIndex=0;
-  else slideIndex=index;
-  slides.forEach((s,i)=>{s.classList.remove('active');if(dotsContainer.children[i])dotsContainer.children[i].classList.remove('active');});
-  slides[slideIndex].classList.add('active');
-  if(dotsContainer.children[slideIndex])dotsContainer.children[slideIndex].classList.add('active');
-}
-slides.forEach((_,i)=>{
-  const dot=document.createElement('div');
-  dot.classList.add('dot');
-  if(i===0) dot.classList.add('active');
-  dot.addEventListener('click',()=>showSlide(i));
-  dotsContainer.appendChild(dot);
-});
-prev.addEventListener('click',()=>showSlide(slideIndex-1));
-nextBtn.addEventListener('click',()=>showSlide(slideIndex+1));
-setInterval(()=>showSlide(slideIndex+1),5000);
-
-// Start Button
-document.getElementById("startBtn").addEventListener("click",()=>init());
+// بدء كل شيء عند تحميل الصفحة
+window.addEventListener("load", init);
 </script>
+
 </body>
 </html>
